# m4a-to-flac

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: README.md  cli-reference.md  configuration.md  library-mirror-naming.md  sync-and-backends.md
src/music_flac/: __init__.py  __main__.py  cli.py  config.py  hifi.py  layout.py  metadata.py  models.py  naming.py  paths.py  scanner.py  sync.py
src/music_flac/api/: __init__.py  base.py  hifi_flac.py  http.py  stub.py
tests/: test_cli.py  test_hifi.py  test_hifi_manifest.py  test_layout.py  test_naming.py  test_sync.py
