[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "music-flac"
version = "0.2.0"
description = "Scan a music library, mirror layout for FLAC downloads via API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mutagen>=1.47,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<9",
]

[project.scripts]
music-flac = "music_flac.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
